<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ntfy Relay</string>
    <string name="desc_logo">Logo</string>
    <string name="desc_enter_notification_url">Enter Notification URL</string>
    <string name="desc_authentication">Authentication</string>
    <string name="desc_auth_none">None</string>
    <string name="desc_auth_basic">Basic</string>
    <string name="desc_auth_token">Token</string>
    <string name="desc_credentials">Credentials</string>
    <string name="desc_username">Username</string>
    <string name="desc_password">Password</string>
    <string name="desc_stopped">Ntfy Relay is stopped.</string>
    <string name="desc_running">Ntfy Relay is running.</string>
    <string name="channel_name">Ntfy Relay</string>
    <string name="channel_description">Nfty Relay Status</string>
    <string name="desc_notification_url">Notification URL</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
</resources>